@@ -1,3 +1,5 @@
+- New feature: Entity employee
+
 39.1.0 (26-10-2022)
 - Refactor: Remove branch group subclasses
 
